--- a/src/app/organisms/public-channels/PublicChannels.scss
+++ b/src/app/organisms/public-channels/PublicChannels.scss
@@ -55,6 +55,10 @@
     & .donut-spinner {
       margin: 0 var(--sp-tight);
     }
+
+    .try-join-with-alias {
+      margin-top: var(--sp-normal);
+    }
   }
   &__search-error {
     color: var(--bg-danger);
@@ -83,5 +87,14 @@
       left: var(--sp-extra-tight);
       right: var(--sp-normal);
     }
+  }
+}
+
+.try-join-with-alias {
+  display: flex;
+  align-items: center;
+  
+  & >.text:nth-child(2) {
+    margin: 0 var(--sp-normal);
   }
 }
