--- a/src/app/organisms/channel/ChannelViewInput.scss
+++ b/src/app/organisms/channel/ChannelViewInput.scss
@@ -23,14 +23,19 @@
 
     & > .ic-raw {
       transform: scale(0.8);
-      margin-left: var(--sp-extra-tight);
-      [dir=rtl] & {
-        margin-left: 0;
-        margin-right: var(--sp-extra-tight);
-      }
+      margin: 0 var(--sp-extra-tight);
     }
     & .scrollbar {
       max-height: 50vh;
+      flex: 1;
+
+      &:first-child {
+        margin-left: var(--sp-tight);
+        [dir=rtl] & {
+          margin-left: 0;
+          margin-right: var(--sp-tight);
+        }
+      }
     }
   }
 
@@ -44,7 +49,7 @@
       width: 100%;
       min-width: 0;
       min-height: 100%;
-      padding: var(--sp-ultra-tight) calc(var(--sp-tight) - 2px);
+      padding: var(--sp-ultra-tight) 0;
 
       &::placeholder {
         color: var(--tc-surface-low);
