--- a/src/app/organisms/invite-list/InviteList.scss
+++ b/src/app/organisms/invite-list/InviteList.scss
@@ -14,7 +14,7 @@
     }
   }
 
-  & .channel-tile {
+  & .room-tile {
     margin-top: var(--sp-normal);
     &__options {
       align-self: flex-end;
