--- a/src/app/organisms/invite-user/InviteUser.scss
+++ b/src/app/organisms/invite-user/InviteUser.scss
@@ -39,7 +39,7 @@
     border-top: 1px solid var(--bg-surface-border);
   }
 
-  & .channel-tile {
+  & .room-tile {
     margin-top: var(--sp-normal);
     &__options {
       align-self: flex-end;
