--- a/src/app/templates/client/Client.scss
+++ b/src/app/templates/client/Client.scss
@@ -6,7 +6,7 @@
 .navigation__wrapper {
   width: var(--navigation-width);
 }
-.channel__wrapper {
+.room__wrapper {
   flex: 1;
   min-width: 0;
   background-color: var(--bg-surface);
