Added space nesting (#52)

--- a/src/app/molecules/room-selector/RoomSelector.scss
+++ b/src/app/molecules/room-selector/RoomSelector.scss
@@ -32,9 +32,11 @@
       }
     }
   }
-  &:focus {
-    outline: none;
+  &:focus-within {
     background-color: var(--bg-surface-hover);
+    & button {
+      outline: none;
+    }
   }
   &:active {
     background-color: var(--bg-surface-active);
