--- a/src/app/organisms/navigation/Drawer.scss
+++ b/src/app/organisms/navigation/Drawer.scss
@@ -23,17 +23,27 @@
     @extend .drawer-flexBox;
   }
 }
-
-.breadcrumb__wrapper {
-  display: none;
-  height: var(--header-height);
-}
 .rooms__wrapper {
   @extend .drawer-flexItem;
+  position: relative;
 }
 
 .rooms-container {
   padding-bottom: var(--sp-extra-loose);
+
+  &::before {
+    position: absolute;
+    top: 0;
+    
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 8px;
+    background-image: linear-gradient(
+      to bottom,
+      var(--bg-surface-low),
+      var(--bg-surface-low-transparent));
+  }
 
   & > .room-selector {
     width: calc(100% - var(--sp-extra-tight));
