Added option to fav spaces (#52)

--- a/src/app/molecules/room-selector/RoomSelector.scss
+++ b/src/app/molecules/room-selector/RoomSelector.scss
@@ -83,7 +83,7 @@
     margin: 0 !important;
   }
 
-  & .ic-btn-surface {
+  & .ic-btn {
     padding: 6px;
     border-radius: calc(var(--bo-radius) / 2);
   }
