Added unread symbol for Spaces, DMs and Home (#82)

--- a/src/app/atoms/badge/NotificationBadge.scss
+++ b/src/app/atoms/badge/NotificationBadge.scss
@@ -12,7 +12,7 @@
   }
 
   &--alert {
-    background-color: var(--bg-danger);
+    background-color: var(--bg-positive);
     & .text { color: white }
   }
 
