--- a/src/index.scss
+++ b/src/index.scss
@@ -220,6 +220,8 @@
   --bg-surface-low: hsl(64, 6%, 10%);
   --bg-surface-low-transparent: hsla(64, 6%, 14%, 0);
 
+  --bg-badge: #c4c1ab;
+
   
   /* text color | --tc-[background type]-[priority]: value */
   --tc-surface-high: rgb(255, 251, 222, 94%);
