--- a/src/app/molecules/image-upload/ImageUpload.scss
+++ b/src/app/molecules/image-upload/ImageUpload.scss
@@ -1,20 +1,50 @@
+.img-upload__wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .img-upload {
 	display: flex;
-	flex-direction: row-reverse;
-	width: 80px;
-	height: 80px;
-}
-
-.img-upload:hover {
 	cursor: pointer;
-}
+	position: relative;
 
-.img-upload__mask {
-	mask: url('../../../../public/res/svg/avatar-clip.svg');
-	-webkit-mask: url('../../../../public/res/svg/avatar-clip.svg');
-}
+	&__process {
+		width: 100%;
+		height: 100%;
+		border-radius: var(--bo-radius);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(0, 0, 0, .6);
+		
+		position: absolute;
+		left: 0;
+		right: 0;
+		z-index: 1;
+		& .text {
+			text-transform: uppercase;
+			font-weight: 600;
+			color: white;
+		}
+		&--stopped {
+			display: none;
+		}
+		& .donut-spinner {
+			border-color: rgb(255, 255, 255, .3);
+    	border-left-color: white;
+		}
+	}
+	&:hover .img-upload__process--stopped {
+		display: flex;
+	}
 
-.img-upload__icon {
-  z-index: 1;
-  position: absolute;
+
+	&__btn-cancel {
+		margin-top: var(--sp-extra-tight);
+		cursor: pointer;
+		& .text {
+			color: var(--tc-danger-normal)
+		}
+	}
 }
