--- a/src/app/atoms/chip/Chip.scss
+++ b/src/app/atoms/chip/Chip.scss
@@ -1,23 +1,19 @@
 .chip {
-  height: 28px;
-  width: fit-content;
-  width: -moz-fit-content;
-  background: var(--bg-surface-low);
-
-  display: flex;
+  padding: var(--sp-ultra-tight) var(--sp-extra-tight);
+  
+  display: inline-flex;
   flex-direction: row;
   align-items: center;
-
-  padding: var(--sp-ultra-tight) var(--sp-extra-tight);
-  box-sizing: border-box;
+  
+  background: var(--bg-surface-low);
   border-radius: var(--bo-radius);
   border: 1px solid var(--bg-surface-border);
 
-  & .text-b2 {
-    color: var(--tc-surface-high);
-  }
-
-  & .ic-raw-small {
+  & > .ic-raw {
     margin-right: var(--sp-extra-tight);
+    [dir=rtl] & {
+      margin-right: 0;
+      margin-left: var(--sp-extra-tight);
+    }
   }
 }
